<resources>
    <string name="app_name">PetIt</string>

    <!-- strings per il tutorial-->
    <string name="activity_tutorial">Tutorial</string>
    <string name="next">AVANTI</string>
    <string name="skip">SALTA</string>
    <string name="start">REGISTRATI</string>

    <string name="tutorial_1_title">Un cucciolo è in cerca di aiuto?</string>
    <string name="tutorial_1_desc">Vuoi aiutarlo ma non sai come fare?</string>

    <string name="tutorial_2_title">Hai smarrito il tuo cucciolo?</string>
    <string name="tutorial_2_desc">Compila il form e segnala lo smarrimento o la posizione di un animale</string>

    <string name="tutorial_3_title">Ora è sulla mappa!</string>
    <string name="tutorial_3_desc">Controlla in tempo reale sulla mappa tutti gli avvistamenti della zona</string>

    <string name="tutorial_4_title">Aiuta a far ritornare a casa i cuccioli smarriti \u2764</string>
    <string name="tutorial_4_desc"></string>

    <!-- String menù -->
    <string name="gestisciSegnalazioni">Gestisci Segnalazioni</string>
    <string name="ricercaSegnalazioni">Ricerca Segnalazione</string>
    <string name="messaggi">Messaggi</string>
    <string name="modificaProfilo">Modifica il tuo profilo</string>


    <!-- String menù impostazioni -->
    <string name="impostazioni">Modifica Impostazioni</string>
    <string name="modifica_nome">Modifica Nome</string>
    <string name="modifica_password">Modifica Password</string>
    <string name="attiva_localizzazione">Attiva localizzazione</string>
    <string name="impostazione_da_definire">Impostazione XXX</string>

    <!-- String del login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logo">logo</string>
    <string name="title_activity_maps">Map</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_message">Non sei registrato?</string>
    <string name="registrati">Registrati</string>

    <!-- Stringe barra navigazione -->
    <string name="aggiungi">Aggiungi</string>
    <string name="menu">Menu</string>
    <string name="mappa">Mappa</string>

</resources>
